plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.sonarqube" version "6.3.1.5724"
    id 'jacoco'
}

group = 'com.trimminflow'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

jacoco {
    toolVersion = "0.8.11"
}

sonar {
    properties {
        property "sonar.projectKey", "maxiG180_TrimminFlow-Backend"
        property "sonar.organization", "maksym-grebeniuk"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.java.binaries", "build/classes/java/main"
        property "sonar.cpd.exclusions", "**/dto/**, **/entity/**"
        property "sonar.exclusions", "**/dto/**, **/entity/**, **/config/**"
        property "sonar.coverage.exclusions", "**/dto/**, **/entity/**, **/config/**, **/DemoApplication.java"
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    implementation 'com.stripe:stripe-java:24.16.0'
    implementation 'com.resend:resend-java:3.0.0'
    implementation 'com.google.zxing:core:3.5.2'
    implementation 'com.google.zxing:javase:3.5.2'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.3'
    implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'

    runtimeOnly 'org.postgresql:postgresql'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'com.cloudinary:cloudinary-http44:1.36.0'
}

tasks.named('test') {
    useJUnitPlatform() {
        excludeTags 'integration'
        // Exclude integration tests for now - they need H2 database setup
        exclude '**/integration/**'
    }
    finalizedBy jacocoTestReport
}

tasks.named('jacocoTestReport') {
    dependsOn test
    reports {
        xml.required = true
    }
}

tasks.named('sonar') {
    dependsOn test, jacocoTestReport
}